--- a/app/src/main/res/layout/portfolio_list_item.xml
+++ b/app/src/main/res/layout/portfolio_list_item.xml
@@ -46,8 +46,8 @@
                     android:layout_height="wrap_content"
                     android:text="이름"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="1dp"
