--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.thejoeunit.www.beautysalon.activities.AdminMainActivity">
+    tools:context="com.thejoeunit.www.beautysalon.activities.admin_activity.AdminMainActivity">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
