--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.thejoeunit.www.beautysalon.activities.MainActivity">
+    tools:context="com.thejoeunit.www.beautysalon.activities.user_activity.MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:background="@color/colorPrimaryDark">
+
+        <Button
+            android:id="@+id/reqTestBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="평점필터"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,12 +26,21 @@
             android:textSize="20sp"
             android:layout_gravity="center"/>
 
+        <ImageView
+            android:id="@+id/filterBtnImg"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@mipmap/ic_launcher_round"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="15dp"/>
+
     </FrameLayout>
 
     <ListView
-        android:id="@+id/designerList"
+        android:id="@+id/designerListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:textFilterEnabled="true">
 
     </ListView>
 
