--- a/app/src/main/res/layout/activity_select_login_mode.xml
+++ b/app/src/main/res/layout/activity_select_login_mode.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context="com.thejoeunit.www.beautysalon.activities.SelectLoginMode">
+    tools:context="com.thejoeunit.www.beautysalon.activities.SelectLoginModeActivity">
 
     <ImageView
         android:layout_width="150dp"
