--- a/app/src/main/res/layout/activity_worker_main.xml
+++ b/app/src/main/res/layout/activity_worker_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context="com.thejoeunit.www.beautysalon.activities.WorkerMainActivity">
+    tools:context="com.thejoeunit.www.beautysalon.activities.worker_activity.WorkerMainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
