--- a/app/src/main/res/layout/designer_list_item.xml
+++ b/app/src/main/res/layout/designer_list_item.xml
@@ -14,6 +14,7 @@
         android:padding="5dp">
 
         <ImageView
+            android:id="@+id/designerProfileImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="10dp"
