--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,18 @@
         android:background="@color/colorPrimaryDark">
 
         <Button
+            android:visibility="gone"
             android:id="@+id/reqTestBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="평점필터"/>
+
+        <Button
+            android:id="@+id/profileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="프로필"/>
+
 
         <TextView
             android:layout_width="wrap_content"
